--- a/VibeBot/VibeBot/Properties/Resources.resx
+++ b/VibeBot/VibeBot/Properties/Resources.resx
@@ -139,13 +139,16 @@
   <data name="load" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Recources\load.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="gearBackBlack" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Recources\gearBackBlack.JPG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="mp3gain" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\mp3gain.exe;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="Complete" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Recources\Complete.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="gearBackBlack" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Recources\gearBackBlack.JPG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="questionMark" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Recources\questionMark.JPG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
